# rskafka-cli

./: Cargo.toml  README.md
src/: client.rs  consume.rs  logging.rs  main.rs  runtime.rs
