[package]
name = "rskafka-cli"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
clap = { version = "3.2.11", features = ["derive"] }
futures = "0.3"
humantime = "2.1.0"
rskafka = { path = "../rskafka", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.19.2", features = ["fs", "io-std", "rt-multi-thread"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.mini]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
